Add flight management functionality with initial flight data
- Implemented a new JavaScript module for adding flights to the database.
- Created a `zbor` class to represent flight details including origin, destination, departure and arrival times, aircraft model, available seats, and price.
- Added a function to add flights to the database and log the addition process.
- Populated the database with a list of realistic flight routes, including domestic, European, and long-haul flights.
- Ensured error handling during the flight addition process.